    * New option for full SNMP scan in bulk inventory
    * bulk operations now also available when checkboxes are off
    * LDAP: Added test to validate the configured role sync groups
    * Disabled replication type "peer" in site editor.
    * Added "permanently ignore" button to inventory services dialog which 
      links directly to the disabled services view
    * FIX: correct display of number of hosts in bulk inventory
    * FIX: nailed down ".siteid" exception when added new site
    * FIX: fixed setting for locking mode from 'ait' to 'wait'
    * FIX: avoid removal of tags from rules when not yet acknowledged
    * FIX: avoid need for apache restart when adding new service levels

    Livestatus:
    * Removed "livecheck". It never was really stable. Nagios4 has something
      similar built in. And also the Check_MK Micro Core.
    * table statehist: no longer computes an unmonitored state for hosts and
                       services on certain instances. 
                       (showed up as no hosts/services in the multisite gui)

1.2.3i4:
    Core:
    * Create inventory check also for hosts without services, if they
          have *no* ping tag.

    WATO:
    * Bulk inventory: speed up by use of cache files and doing stuff in
          groups of e.g. 10 hosts at once
    * Multisite connection: new button for cloning a connection

    Checks & Agents:
    * Linux agent RPM: remove dependency to package "time". That package
         is just needed for the binary mk-job, which is useful but not
         neccessary.

    Multisite:
    * FIX: fix broken single-site setups due to new caching

1.2.3i3:
    Core:
    * FIX: fixed typo in core startup message "logging initial states"
    * FIX: livestatus table statehist: fixed rubbish entries whenever
           logfile instances got unloaded

    Livestatus:
    * FIX: check_mk snmp checks with a custom check interval no longer
           have an incorrect staleness value

    Notifications: