@@ -1116,3 +1116,44 @@ table.multisite_conn_method td input {
 .wato .biruletree .node {
     margin-top: 0px;
 }
+
+/*-Host Diag-----------------------------------------------------------.
+|              _   _           _     ____  _                           |
+|             | | | | ___  ___| |_  |  _ \(_) __ _  __ _               |
+|             | |_| |/ _ \/ __| __| | | | | |/ _` |/ _` |              |
+|             |  _  | (_) \__ \ |_  | |_| | | (_| | (_| |              |
+|             |_| |_|\___/|___/\__| |____/|_|\__,_|\__, |              |
+|                                                  |___/               |
++---------------------------------------------------------------------*/
+
+.wato .diag_host .test {
+    margin-bottom:15px;
+}
+
+.wato .diag_host .log {
+    height: 100px;
+    width: 700px;
+    font-family: monospace, sans-serif;
+    overflow-y: scroll;
+    padding: 12px;
+    vertical-align: top;
+    background-color: #fff;
+    /* below resize option is css3 */
+    resize:both;
+}
+
+.wato .diag_host td.icons div {
+    position: relative;
+    width: 22px;
+    height: 120px;
+}
+
+.wato .diag_host td.icons div img {
+    margin-left: 2px;
+}
+
+.wato .diag_host td.icons img.retry {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
