@@ -102,6 +102,8 @@
     * Disabled replication type "peer" in site editor.
     * Added "permanently ignore" button to inventory services dialog which 
       links directly to the disabled services view
+    * Added dignose page linked from host edit dialog. This can be used to test
+      connection capabilities of hosts
     * FIX: correct display of number of hosts in bulk inventory
     * FIX: nailed down ".siteid" exception when added new site
     * FIX: fixed setting for locking mode from 'ait' to 'wait'
